# DRF-Clean-Architecture

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
apps/books/: README.md  admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/books/application/: README.md  interfaces.py  services.py
apps/books/domain/: README.md  entities.py  exceptions.py
apps/books/infrastructure/: README.md  models.py  repositories.py
apps/books/migrations/: 0001_initial.py  0002_initial.py
apps/books/presentation/: README.md  filters.py  permissions.py  serializers.py  urls.py  views.py
apps/books/tests/: README.md  test_domain.py  test_models.py  test_repositories.py  test_serializers.py  test_services.py  test_views.py
apps/users/: README.md  admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/users/application/: README.md  interfaces.py  services.py
apps/users/domain/: README.md  entities.py  exceptions.py
apps/users/infrastructure/: README.md  managers.py  models.py  repositories.py
apps/users/migrations/: 0001_initial.py
apps/users/presentation/: README.md  permissions.py  serializers.py  urls.py  views.py
config/: README.md  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
docs/: api-examples.md  architecture.md  database.md  deployment.md  testing.md  troubleshooting.md
(+7 files in other folders)
